--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0"
     }
 }
